<resources>
    <string name="version_downloading">正在下载最新%s版本...</string>
    <string name="confirm_title">提示</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="content_description_icon">icon</string>
    <string name="refresh">刷新</string>
    <string name="processing">加载中</string>
    <string name="download">下载</string>
    <string name="download_fail">下载安装包失败</string>
    <string name="cancel_install_msp">你已取消安装移动快捷支付服务</string>
    <string name="cancel_install_alipay">你已取消安装支付宝钱包</string>
    <string name="redo">重试</string>
    <string name="install_msp">你尚未安装支付宝移动快捷支付服务，请立即安装</string>
    <string name="install_alipay">你尚未安装支付宝钱包，请立即安装</string>
    <string name="zsht_service_for_you">PP钱包支付为您服务</string>
    <string name="zsht_pay_money">应付金额:</string>
    <string name="zsht_payall_money">订单总金额:</string>
    <string name="zsht_not_receive_verify_code_help1">1、请确认当前是否使用预留手机号.</string>
    <string name="zsht_not_receive_verify_code_help2">2、请查看短信是否被手机安全软件拦截.</string>
    <string name="zsht_not_receive_verify_code_help3">3、获取更多帮助，可联系PP钱包客户电话phone.</string>
    <string name="zsht_download_ppwallet">下载PP钱包</string>
    <string name="zsht_ppwallet_describe">手机话费充值100只要95</string>
    <string name="zsht_no_card_deal_one">继续完成本次交易</string>
    <string name="zsht_pay_agreement">《支付协议》</string>
    <string name="com.crashlytics.android.build_id">bf1d0b7f-8a15-499d-8ba5-674cda790435</string>
    <string name="title_use_license">我知道使用协议</string>
    <string name="app_name">我知道</string>
    <string name="get_verifycode">获取验证码</string>
    <string name="getting_verifycode">获取中</string>
    <string name="input_verifycode">请输入验证码</string>
    <string name="verify_telephone">验证手机</string>
    <string name="phone_longth_error">电话号码有误</string>
    <string name="make_sure_order">立即下单</string>
    <string name="ok">确定</string>
    <string name="try_again">重试</string>
    <string name="net_error_retry">加载失败，点击重试</string>
    <string name="no_more">没有更多</string>
    <string name="searching_nearby_drivers">正在努力为您寻找附近的司机</string>
    <string name="order_time_tip">下单时间:</string>
    <string name="onekey_order_input_error">请填入正确的联系电话和联系地址</string>
    <string name="edit_address">联系地址</string>
    <string name="edit_address_location">手动定位</string>
    <string name="share_title">邀请好友</string>
    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="share_failed">分享失败</string>
    <string name="wechat_demo_title">分享到朋友圈</string>
    <string name="share_download">APP下载</string>
    <string name="share_public_account">微信公众帐号</string>
    <string name="share_sms">短信</string>
    <string name="share_friends">朋友圈</string>
    <string name="share_success_title">完成</string>
    <string name="share_success_content">发送成功</string>
    <string name="register_tip_top">享受全国最专业、安全、快捷的代驾服务</string>
    <string name="login">登录</string>
    <string name="phone_login">手机号登录</string>
    <string name="select_city">选择城市</string>
    <string name="login_phone_confirm">确认手机号</string>
    <string name="commom_affirm">确认</string>
    <string name="common_cancle">取消</string>
    <string name="commom_yes">是</string>
    <string name="commom_no">否</string>
    <string name="common_download">下载</string>
    <string name="common_refuse">拒绝</string>
    <string name="common_agree">同意</string>
    <string name="common_share">分享</string>
    <string name="default_waiting">加载中...</string>
    <string name="pleasewait_waiting">请稍候...</string>
    <string name="checkversion_waiting">版本检测</string>
    <string name="error_can_not_call">呼叫失败，请更换电话再次尝试</string>
    <string name="error_can_not_send_sms">短信邀请失败，请更换电话再次尝试</string>
    <string name="error_crash">抱歉，程序异常，请重新启动</string>
    <string name="error_extras">获取数据失败</string>
    <string name="btnBack">返回</string>
    <string name="order_by_key">代叫司机</string>
    <string name="app_list_footer_more">更多...</string>
    <string name="app_list_footer_loading">正在加载</string>
    <string name="driver_detail_comment_title">评价详情</string>
    <string name="hasnoreview">该司机暂无车主评价!</string>
    <string name="nb_count">代驾:%s次</string>
    <string name="call_driver">立即下单</string>
    <string name="coupons">优惠券</string>
    <string name="input_coupons">请输入优惠券号码</string>
    <string name="input_bind_phone">请输入手机号码</string>
    <string name="data_not_right">请输入完整信息</string>
    <string name="data_phone_error">请输入正确的手机号码</string>
    <string name="bind_success">绑定成功</string>
    <string name="no_coupon_title">暂无优惠券</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_password">请输入密码</string>
    <string name="input_valicode">请输入验证码</string>
    <string name="setting">设置</string>
    <string name="protocol">软件使用协议</string>
    <string name="feedback">意见反馈</string>
    <string name="inviteperson">邀请好友</string>
    <string name="hotline">客服热线</string>
    <string name="checkversion">版本更新</string>
    <string name="phonenumber">4006-91-3939</string>
    <string name="submit_suggestion">提交</string>
    <string name="submit_tip">写给我知道的反馈意见(最多200汉字)</string>
    <string name="submit_success">意见反馈提交成功！</string>
    <string name="submit_none">请写上您宝贵的意见</string>
    <string name="submit_tolong">超出字数限制,最多输入200字</string>
    <string name="setting_new_version">有新版本</string>
    <string name="non_vip_master_card">抱歉，vip副卡用户暂时不能使用开发票功能</string>
    <string name="about_edaijia">商务合作</string>
    <string name="banquan">版权所有</string>
    <string name="about">关于</string>
    <string name="price_title">价格表</string>
    <string name="mydetail">编辑我的资料</string>
    <string name="logout_account">退出账号</string>
    <string name="iam">您的称谓</string>
    <string name="account_vip">VIP</string>
    <string name="emergency_phone">紧急联系电话</string>
    <string name="common_place">常用目的地</string>
    <string name="current_order_title">当前订单</string>
    <string name="sex_male">先生</string>
    <string name="sex_female">女士</string>
    <string name="myaccount">我的账户</string>
    <string name="myaccount_info">账户明细</string>
    <string name="myaccount_coupons">优惠券</string>
    <string name="e_conins">积分</string>
    <string name="vip_no_coupon_text">VIP暂时不支持优惠券使用</string>
    <string name="recharge_account">充值账户</string>
    <string name="choose_recharge_amount">充值金额</string>
    <string name="first_recharge_discount">首次充值，享受95折优惠</string>
    <string name="custom_money">自定义金额：</string>
    <string name="custom_money_hint">请填写充值金额</string>
    <string name="choose_recharge_mode">支付方式</string>
    <string name="bank_recharge">银联支付</string>
    <string name="zhifubao_recharge">支付宝支付</string>
    <string name="weixin_recharge">微信支付</string>
    <string name="pp_recharge">PP钱包支付</string>
    <string name="yue_recharge">余额支付</string>
    <string name="go_recharge">支付</string>
    <string name="xicheka_recharge">代驾卡支付</string>
    <string name="recharge_empty_hint">请输入100~10000内整数</string>
    <string name="payment_empty_hint">请输入正确金额</string>
    <string name="payment_max_hint">最大支付金额10000元</string>
    <string name="recharge_valid_hint">有效充值金额100元到10000元</string>
    <string name="get_receipt_hint">"如需开具发票，请拨打客服热线：
4006-91-3939"</string>
    <string name="pay_noorder_toast">暂无可支付订单</string>
    <string name="current_balance">当前余额</string>
    <string name="trans_xq">收支详情</string>
    <string name="trans_id">流水号：</string>
    <string name="trans_type">类型：</string>
    <string name="app_tip">提示</string>
    <string name="getting_prepayid">正在提交订单...</string>
    <string name="pay">支付：</string>
    <string name="pay_mode">支付方式：</string>
    <string name="datetime">时间：</string>
    <string name="balance">余额：</string>
    <string name="remark">备注：</string>
    <string name="no_trans_record">暂无交易信息。</string>
    <string name="history_order">历史订单</string>
    <string name="order_detail">订单详情</string>
    <string name="no_history">暂无订单，快去叫代驾吧</string>
    <string name="yuan">元</string>
    <string name="service_mark">请为本次服务打分</string>
    <string name="start_position">出发地:</string>
    <string name="end_position">目的地:</string>
    <string name="comment_title">评价</string>
    <string name="negative_reason">服务监督</string>
    <string name="nice_service">这个师傅服务真不错，赞一个。</string>
    <string name="unwear_uniforms">没穿工服</string>
    <string name="tech_difference">驾驶技术差</string>
    <string name="bad_attitude">态度恶劣</string>
    <string name="charges">多收费/未展示计价器</string>
    <string name="other_suggestion">请说出您不满意的原因，一经核实，立即严惩</string>
    <string name="commit_comment">评价司机</string>
    <string name="please_comment">请为本次订单评价</string>
    <string name="update_title">我知道</string>
    <string name="download_process">%d%%</string>
    <string name="download_completed">下载完成，点击安装</string>
    <string name="update_downloading">新的应用包正在下载中</string>
    <string name="notifation_new_app_found">我知道有新版本，点击下载</string>
    <string name="notifation_new_app_failed">下载失败，点击重试</string>
    <string name="no_new_app">您正在使用最新版本，谢谢支持！</string>
    <string name="new_app_found_message">检测到新版本,现在下载</string>
    <string name="show_once">不再显示此内容</string>
    <string name="open_wfi_title">提高我的位置精确度</string>
    <string name="open_wfi_content">如需在室内获取更精确的位置,本应用将帮您打开Wi-Fi,并在应用退出后自动关闭.</string>
    <string name="msg_eula">我知道使用协议</string>
    <string name="btn_phonenumber">4006-91-3939</string>
    <string name="connect_net_again">重新连接网络</string>
    <string name="location_failure">定位失败</string>
    <string name="local_error_text">"请尝试重新定位或猛击下方电话继续享受我知道提供的服务"</string>
    <string name="no_driver_serving_text">暂无订单，快去叫代驾吧</string>
    <string name="no_payorder_text">暂无可支付的订单</string>
    <string name="order_trace">订单轨迹</string>
    <string name="ecoins">积分</string>
    <string name="myecoins">我的积分</string>
    <string name="mysurplusecoins">我的剩余积分</string>
    <string name="whatisecoins">什么是积分？</string>
    <string name="ecoinntroduction">积分是用户在我知道消费代驾服务获得的奖励 , 消费1元获得1积分 , 可在代驾平台使用</string>
    <string name="ecoinpayintroduction">"目前积分可支付发票邮费，更多使用方法即将推出，敬请期待！
用户获得的积分，有效期到下个自然年年底。如2014年获得的积分未使用，将在2015年12月31日清空。用户初始积分为2014年的代驾消费奖励。"</string>
    <string name="message">消息</string>
    <string name="order">订单</string>
    <string name="edaijia">我知道</string>
    <string name="message_nounread">暂无未读消息</string>
    <string name="message_no">暂无消息</string>
    <string name="message_pre">消息：</string>
    <string name="check_network">抱歉, 请检查您的网络连接</string>
    <string name="network_error_emptyview">抱歉, 您的网络连接中断</string>
    <string name="myaccount_coupon_title">我知道优惠券</string>
    <string name="bind">绑定</string>
    <string name="gift">赠送</string>
    <string name="bind_coupon_title">添加优惠券</string>
    <string name="gift_coupon_title">赠送优惠券</string>
    <string name="coupon_expire_date">到期日：%s</string>
    <string name="coupon_binging">绑定中</string>
    <string name="coupon_gifting">赠送中</string>
    <string name="many_coupons">%d张优惠券</string>
    <string name="choose_coupon">选择优惠券</string>
    <string name="use_coupon">使用优惠券</string>
    <string name="text_max_coupon_use">本次服务最多可使用%d张优惠券</string>
    <string name="coupon_valid_date">有效期：%s</string>
    <string name="coupon_num_not_exceed_drvier_num">优惠券数不能超过预约司机数</string>
    <string name="coupon_choice_no_data">您的账户暂无可用优惠券。</string>
    <string name="check_and_login">登录</string>
    <string name="check_and_register">注册</string>
    <string name="edit_password">确定修改</string>
    <string name="vehicle_type">车型</string>
    <string name="vehicle_number_">车牌号</string>
    <string name="hint_vehicle_type">请选择车型</string>
    <string name="hint_vehicle_number">请输入车牌号</string>
    <string name="vehicle_add">添加</string>
    <string name="select">选</string>
    <string name="current_address">停放位置</string>
    <string name="current_address_tip">*例如：太原市南中华街东口大院小区C区5号楼</string>
    <string name="record">语音录音</string>
    <string name="start_record">开始录音</string>
    <string name="record_tip">*小提示：为了更快、更准确的找到你的爱车，可以给我们稍句话</string>
</resources>