<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ecoins"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/page_back"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="120.0dip"
            android:layout_marginLeft="2.0dip"
            android:layout_marginRight="2.0dip"
            android:background="@color/orange"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24.0dip"
                android:layout_marginTop="24.0dip"
                android:text="@string/mysurplusecoins"
                android:textColor="@color/white"
                android:textSize="14.0sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ecoins_myecoins_count"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24.0dip"
                android:textColor="@color/white"
                android:textSize="41.0sp"
                android:text="39"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15.0dip"
                android:layout_marginRight="15.0dip"
                android:layout_marginTop="22.0dip"
                android:text="@string/whatisecoins"
                android:textColor="@color/about_key_color"
                android:textSize="15.0sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15.0dip"
                android:layout_marginRight="15.0dip"
                android:layout_marginTop="14.0dip"
                android:text="@string/ecoinntroduction"
                android:textColor="@color/about_key_color"
                android:textSize="12.0sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15.0dip"
                android:layout_marginRight="15.0dip"
                android:layout_marginTop="15.0dip"
                android:text="@string/ecoinpayintroduction"
                android:textColor="@color/about_key_color"
                android:textSize="9.0sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>