<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/page_back"
    android:orientation="vertical" >

    <include layout="@layout/layout_base_ui" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10.0dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/yedt_phone"
                android:layout_width="0.0dip"
                android:layout_height="40.0dip"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.0"
                android:background="@drawable/button_white"
                android:hint="@string/input_phone"
                android:inputType="number" />

            <Button
                android:id="@+id/btn_get_verifycode"
                style="@style/btn_white_blue_text"
                android:layout_width="120.0dip"
                android:layout_height="40.0dip"
                android:layout_marginLeft="10.0dip"
                android:enabled="false"
                android:text="@string/get_verifycode" />
        </LinearLayout>

        <EditText
            android:id="@+id/edt_verifycode"
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/button_white"
            android:hint="请输入验证码"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_yanzhen"
            style="@style/btn_blue"
            android:layout_width="fill_parent"
            android:layout_marginTop="15.0dip"
            android:gravity="center"
            android:text="@string/check_and_login" />

        <CheckBox
            android:id="@+id/licence_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15.0dip"
            android:gravity="center_vertical" />
    </LinearLayout>

</LinearLayout>